project-orion/deployment/kustomize/overlays/staging/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-worker
spec:
  replicas: 2
